# stock-project-server

./: README.md  docs.md  main.py  makefile  pyproject.toml
database/: adk-db.sqlite
docs/: deep_research.md  sub-agents.md
google_tools/: agent.py
google_tools/sub_agents/deep_search/: agent.py
google_tools/sub_agents/google_trend/: 01-seed-keyword.md  agent.py
google_tools/utils/tools/: README_google_trends.md  google_search_parralel.py  google_trend_example.py  google_trend_tool.py
mcp_server/: custom_agent_tool.py  load_web_tool.py  payment_agent.py
mcp_server/weather_agent/: mcp_server.py  weather_agent.py  weather_tools.py
stock/: agent.py  prompt.py
stock/sub_agents/content_reviewer/: agent.py  prompt.py
stock/sub_agents/content_writer/: agent.py  prompt.py
stock/sub_agents/sector_analyzer/: __init__.py  agent.py  prompt.py
stock/sub_agents/stock_analyzer/: agent.py  prompt.py
stock/sub_agents/stock_discovery/: agent.py  prompt.py
stock/sub_agents/supply_demand_analyzer/: __init__.py  agent.py  prompt.py
stock/sub_agents/trading_recommander/: agent.py  prompt.py
stock/sub_agents/volume_analyzer/: __init__.py  agent.py  prompt.py
stock/utils/agents/: trend_research_agent.py
stock/utils/database/: session_service.py
stock/utils/mcp/: calculate.py  file_system.py  load_web_tool.py  payment_agent.py  weather_agent.py
stock/utils/tools/: __init__.py  google_search_agent.py  kiwoom_account_tools.py  kiwoom_auth_tools.py  kiwoom_chart_tools.py  kiwoom_market_tools.py  kiwoom_order_tools.py  kiwoom_ranking_tools.py  patch_content.py  (+5 more)
(+3 files in other folders)
